Fixes overflow in donation card, gives max-heigth to donation text

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -39,13 +39,14 @@ h1 {
 
 .donation-image-container {
 	width: 100%;
-	height: 30%;
+	height: 50%;
 	display: flex;
 	justify-content: center;
 }
 
 .donation-image {
 	height: 100%;
+	width: 100%;
 	border-radius: 0.5rem;
 }
 
@@ -54,7 +55,7 @@ h1 {
 }
 
 .donation-text {
-	height: 70%;
+	max-height: 70%;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
